crates/yakui-widgets/tests/snapshots/snapshot__align_bottom_right.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 87
expression: "view(dom, layout)"
---
- AlignWidget pos(0, 0) size(1000, 1000)
  - ColoredBoxWidget pos(950, 950) size(50, 50)

