crates/yakui-widgets/tests/snapshots/snapshot__column.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 55
expression: "view(dom, layout)"
---
- ListWidget pos(0, 0) size(50, 1000)
  - ColoredBoxWidget pos(0, 0) size(50, 50)
  - ColoredBoxWidget pos(0, 50) size(50, 50)
  - ColoredBoxWidget pos(0, 100) size(50, 50)

