crates/yakui-widgets/tests/snapshots/snapshot__row.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 67
expression: "view(dom, layout)"
---
- ListWidget pos(0, 0) size(1000, 50)
  - ColoredBoxWidget pos(0, 0) size(50, 50)
  - ColoredBoxWidget pos(50, 0) size(50, 50)
  - ColoredBoxWidget pos(100, 0) size(50, 50)

